overflow porblem fixed

--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,9 @@ body {
   .cursorCanvas {
     display: none;
   }
+  .myCanvas {
+    width: 100vw;
+  }
   .loading {
     font-size: 7vw;
   }
@@ -586,6 +589,7 @@ body {
   .header {
     flex-direction: column;
     padding: 1rem 0;
+    width: 100vw;
   }
   .header .nav .link {
     margin: 0 2vw;
@@ -647,6 +651,7 @@ body {
   }
   .main-projects .projects .project {
     margin: 1rem 0;
+    position: relative;
   }
   .main-projects .projects .project .project-image {
     width: 70vw;
@@ -655,6 +660,7 @@ body {
     width: 100%;
     height: 100%;
     top: 0;
+    padding: 0.5rem 1rem;
   }
   .main-contact .form form input,
   .main-contact .form form textarea {
